<resources>
    <string name="app_name">MovieApp</string>

    <string name="title_popular">MovieApp - Popular</string>
    <string name="title_top_rated">MovieApp - Top Rated</string>
    <string name="title_now_playing">MovieApp - Now Playing</string>
    <string name="title_upcoming">MovieApp - Upcoming</string>
    <string name="title_favorite">MovieApp - Favorite</string>

    <string name="search_title">Search</string>
    <string name="search_hint">movie title</string>
    <string name="setting_sort">Sort By</string>
    <string name="setting_search">Search</string>
    <string name="popularLabel">Popular</string>
    <string name="ratingLabel">Top Rated</string>
    <string name="playingLabel">Now Playing</string>
    <string name="upcomingLabel">Upcoming</string>
    <string name="favoriteLabel">Favorite</string>

    <string name="network_unavailable_message">Network is unavailable !</string>
    <string name="error_title">Error</string>
    <string name="error_message">There was an error. Please try again.</string>
    <string name="error_ok_button">OK</string>

    <string name="imageUrlPath">http://image.tmdb.org/t/p/w342/</string>
    <string name="posterImageDescription">poster image</string>
    <string name="title_background_description">Title background image</string>

    <!-- themoviedb api key-->
    <string name="apiKey">eaf6d9fd9f4deabd752e6f00f0227164</string>

</resources>
