<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/setting_search"
          android:icon="@drawable/ic_search_white_48dp"
          android:title="@string/setting_search"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/setting_sort"
          android:icon="@drawable/ic_sort_white_48dp"
          android:title="@string/setting_sort"
          app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/menu_sort_popular"
                  android:title="@string/popularLabel"/>
            <item android:id="@+id/menu_sort_rating"
                  android:title="@string/ratingLabel"/>
            <item android:id="@+id/menu_sort_playing"
                  android:title="@string/playingLabel"/>
            <item android:id="@+id/menu_sort_upcoming"
                  android:title="@string/upcomingLabel"/>
        </menu>
    </item>>
</menu>
